--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
+    "start": "node server.js",
+    "heroku-postbuild": "npx expo export --platform web",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -23,6 +24,7 @@
     "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
+    "express": "^5.1.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
